--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+        maven { url "http://maven.usehover.com/releases" }
     }
 }
 
